# gradient-routing-finetuning

./: .gitignore  CLAUDE.md  README.md  eval.py  eval_multi.py  eval_prefix.py  experiment.py  experiment_finetune.py  experiment_postablation.py  plot_finetune.py  pyproject.toml
adapters/: __init__.py  dual_lora.py  mlp_adapter.py
all_caps/: analyze_orthogonality.py  eval.py  eval_multi.py  experiment.py  experiment_dispersed.py  experiment_finetune.py  experiment_frontload.py  experiment_postablation.py  plot_finetune.py
leetcode_rh/: default_config.yaml  experiment.py
mbpp/: eval.py  eval_multi.py  experiment.py  experiment_random.py  recompute_loss.py
mbpp/reward_hack_data/: results.json
